18000
{code:title=test/A.scala}
package test {
  object A
}
package object test {
  type A = Int
}
{code}
{code:title=repl}
scala> val a = test.A
<console>:10: error: type mismatch;
 found   : test.A.type
 required: Any
Note that A extends Any, not AnyRef.
Such types can participate in value classes, but instances
cannot appear in singleton types or in reference comparisons.
 + "a: test.A.type = " + scala.runtime.ScalaRunTime.replStringOf(`a`, 1000)
                                                                                      ^
{code}
